syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service CompanyProfile{
	rpc GetCompanyProfile(CompProfIdRequest) returns (CompProfileProto);
	rpc CreateCompanyProfile(CompProfileProto) returns (google.protobuf.Empty);
	rpc UpdateCompanyProfile(CompProfileProto) returns (google.protobuf.Empty);
	rpc DeleteCompanyProfile(CompProfileProto) returns (google.protobuf.Empty);
}
message CompProfIdRequest{
	string Id = 1;
}
message CompProfileProto{
	string Id = 1;
    google.protobuf.Timestamp RegistrationDate = 2;
    string CompanyWebsite = 3;
    string ContactPhone = 4;
    string ContactName = 5;
    bytes CompanyLogo = 6;
}